Implemented a graph. Currently it isn't very good. only use while connected to 1 serial port, as the graph 'processes' any received message within the program, not from a certain serialport. this will change soon when i can be bothered to change it lol

--- a/SerialCommunicator/MainWindow.xaml
+++ b/SerialCommunicator/MainWindow.xaml
@@ -93,6 +93,9 @@
                             </MenuItem.Icon>
                         </MenuItem>
                     </MenuItem>
+                    <MenuItem Header="Graph">
+                        <MenuItem Header="Show Graph Window" Command="{Binding GraphWindow.ShowWindowCommand}" Template="{DynamicResource DropDownMenuItemTemplate}"/>
+                    </MenuItem>
                     <MenuItem Header="Message Logging">
                         <MenuItem Header="Write Messages to File" Command="{Binding SerialsList.SelectedItem.SerialView.WriteMessagesToFileCommand}" Template="{DynamicResource DropDownMenuItemTemplate}">
                             <MenuItem.Icon>
