--- a/SerialCommunicator/Windows/HelpWindow.xaml
+++ b/SerialCommunicator/Windows/HelpWindow.xaml
@@ -24,7 +24,7 @@
                 <TextBlock HorizontalAlignment="Center" Text="You can save all the sent/received messages to a file by clicking Message Logging > Write Messages to File at the top and specifying a location." TextWrapping="Wrap" FontSize="20" TextAlignment="Center"/>
                 <Separator Margin="5"/>
                 <TextBlock HorizontalAlignment="Center" 
-                           Text="The Graph. Currently, the graph combines the received text from every serialport. if you're constantly receiving data from 2 serial ports, both of their data will be combined into the graph. this will be changed eventually." TextWrapping="Wrap" FontSize="20" TextAlignment="Center"/>
+                           TextWrapping="Wrap" FontSize="20" TextAlignment="Center"><Run Text="The Graph. "/><Run Text="It plots the received messages into a graph. text is parsed as a number using its position in the alphabet. numbers. ..well they get plotted directly."/></TextBlock>
             </StackPanel>
         </ScrollViewer>
     </Grid>
