--- a/SerialCommunicator/Windows/GraphWindow.xaml
+++ b/SerialCommunicator/Windows/GraphWindow.xaml
@@ -32,23 +32,31 @@
             <graphs:GraphControl Margin="10" Controller="{Binding Controller}" />
 
             <Border Grid.Column="1" Margin="10" BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="5">
-                <StackPanel>
+                <Grid>
+                    <StackPanel Height="258" VerticalAlignment="Top">
 
-                    <CheckBox Margin="0 5 0 0" IsChecked="{Binding Controller.Range.AutoY, Mode=TwoWay}" Content="Auto Range (Y)"/>
+                        <CheckBox Margin="0 0 0 0" IsChecked="{Binding Controller.Range.AutoY, Mode=TwoWay}" Content="Auto Range (Y)"/>
 
-                    <TextBlock FontSize="10" Margin="0 20 0 0">Stroke</TextBlock>
-                    <ComboBox Margin="0 5 0 0" ItemsSource="{StaticResource colors}" SelectedItem="{Binding Controller.DataSeriesCollection[0].Stroke}"/>
+                        <TextBlock FontSize="10" Margin="0 5 0 0">Stroke</TextBlock>
+                        <ComboBox Margin="0 0 0 0" ItemsSource="{StaticResource colors}" SelectedItem="{Binding Controller.DataSeriesCollection[0].Stroke}"/>
 
-                    <TextBlock FontSize="10" Margin="0 10 0 0">Thickness</TextBlock>
-                    <Slider Margin="0 5 0 0" Minimum="1" Maximum="5" Value="{Binding Controller.DataSeriesCollection[0].StrokeThickness}" IsSnapToTickEnabled="True" TickFrequency="1" Height="20"/>
+                        <TextBlock FontSize="10" Margin="0 10 0 0">Thickness</TextBlock>
+                        <Slider Margin="0 0 0 0" Minimum="1" Maximum="5" Value="{Binding Controller.DataSeriesCollection[0].StrokeThickness}" IsSnapToTickEnabled="True" TickFrequency="1" Height="20"/>
+                        
+                        <TextBlock FontSize="10" Margin="0 5 0 0">Minimum Y</TextBlock>
+                        <TextBox Margin="0 0 0 0" Text="{Binding Controller.Range.MinimumY,Mode=TwoWay}"></TextBox>
+                        
+                        <TextBlock FontSize="10" Margin="0 5 0 0">Maximum Y</TextBlock>
+                        <TextBox Margin="0 0 0 0" Text="{Binding Controller.Range.MaximumY,Mode=TwoWay}"></TextBox>
+                        
+                        <TextBlock FontSize="10" Margin="0 5 0 0">Fill</TextBlock>
+                        <ComboBox Margin="0 0 0 0" ItemsSource="{StaticResource brushes}" SelectedItem="{Binding Controller.DataSeriesCollection[0].Fill}"/>
 
-                    <TextBlock FontSize="10" Margin="0 10 0 0">Fill</TextBlock>
-                    <ComboBox Margin="0 5 0 0" ItemsSource="{StaticResource brushes}" SelectedItem="{Binding Controller.DataSeriesCollection[0].Fill}"/>
+                        <CheckBox Margin="0 10 0 0" IsChecked="{Binding Controller.IsPaused,Mode=TwoWay}">Paused</CheckBox>
 
-                    <CheckBox Margin="0 10 0 0" IsChecked="{Binding Controller.IsPaused,Mode=TwoWay}">Paused</CheckBox>
-
-                    <Button Margin="0 10 0 0" Padding="5" Command="{Binding Controller.ClearCommand}">Clear</Button>
-                </StackPanel>
+                    </StackPanel>
+                    <Button Padding="5" Command="{Binding Controller.ClearCommand}" Margin="0,263,0,0">Clear</Button>
+                </Grid>
             </Border>
         </Grid>
     </Grid>
